WIP - add initial infrastructure for templated matcher support
This attempts to implement an end-to-end flow for query parameters
equalTo matchers.  This works but introduces some undesirable side
effects when creating the model for the template engine.  This causes
some tests to fail.

We are also creating the template engine on every match request which is
obviously wasteful.